2010-12-20  Adam Barth  <abarth@webkit.org>

        Move web sites to Websites directory
        https://bugs.webkit.org/show_bug.cgi?id=51323

        Update references to BugsSite to point to the new location.

        This patch was never officially reviewed (because it was too large to
        upload to bugs.webkit.org), but it was discussed on webkit-dev and Mark
        Rowe gave me the green light.

        * Scripts/old-run-webkit-tests:
        * Scripts/webkitpy/common/config/build.py:
        * Scripts/webkitpy/common/config/build_unittest.py:
        * Scripts/webkitpy/common/prettypatch.py:
        * Scripts/webkitpy/layout_tests/port/base.py:
        * Scripts/webkitpy/style/main.py:

2010-12-20  Adrienne Walker  <enne@google.com>

        Unreviewed. Adding myself to the list of committers.

        * webkitpy/common/config/committers.py:

2010-12-20  Mark Rowe  <mrowe@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/8757601> Don't install header files in to the Resources directory.

        * Scripts/check-for-inappropriate-files-in-framework: Don't allow .h files in the
        Resources directory.

2010-12-20  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        commit-queue should include bot id when attaching failure diffs
        https://bugs.webkit.org/show_bug.cgi?id=51280

        This is a tiny change to include the bot id in the name of the attachment.
        Most of this diff is just changing the unit test expectations
        now that I hid the comment printing when the comment is None.

        * Scripts/webkitpy/tool/bot/flakytestreporter.py:
        * Scripts/webkitpy/tool/bot/flakytestreporter_unittest.py:
        * Scripts/webkitpy/tool/commands/upload_unittest.py:
        * Scripts/webkitpy/tool/mocktool.py:

2010-12-20  Jeff Miller  <jeffm@apple.com>

        Reviewed by Dan Bernstein.

        Tools/vcbin/midl.exe needs to be rebuilt